# us-hail-cat-model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  PRE_RUN_REVIEW.md  README.md  REVIEW_2026-05-01.md  REVIEW_PRE_RUN.md  RUN_NOTES.md  SECURITY.md  SKILL.md  UPGRADE_NOTES.md  environment.yml  pyproject.toml  requirements.txt  run_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  methodology.md
.github/workflows/: tests.yml
data/analysis/hail_day_climatology/: README.md  monthly_national_hail_days.csv  national_annual_hail_days.csv  threshold_benchmark_summary.csv
data/analysis/mesh_daily_peaks/: README.md  mesh_calibration_peaks.csv  mesh_calibration_percentiles.csv  mesh_daily_peak_percentiles.csv  mesh_daily_peaks.csv
docs/: FAQ.md  GIT_REMOTES.md  HANDOFF.md  PR_v1_to_v2.1.md  README.md  REVIEW_2026-05-01.md  REVIEW_PRE_RUN.md  RUN_NOTES.md  UPGRADE_NOTES.md  ai_instructions.md  benchmarks.md  data_dictionary.md  executive_summary.md  explainer.md  literature_review.md  methodology.md  migration_plan.md  pnas_article_ai_hail_model.md  pnas_publication_readiness.md  project_memory.md  reproduce.md  sensitivity.md  technical_documentation.md  uncertainty.md  vulnerability_derivation.md
scripts/: 01_download_myrorss.py  02_download_mrms_mesh.py  03_download_spc.py  04a_download_era5_isotherms.py  04b_download_gridrad.py  04b_fill_gridrad_gap.py  04c_fill_gridrad_gap.py  05_apply_mesh_bias_correction.py  06_validate_mesh_vs_spc.py  07_build_hail_climo.py  08_build_event_catalog.py  09_fit_cdf_regional.py  10_build_smooth_cdf.py  11_build_occurrence_probs.py  11b_prepare_topography.py  12_apply_conus_mask.py  13_generate_stochastic_catalog.py  14_build_vulnerability.py  15_render_figures.py  _config.py  _io.py  _logging.py  setup_git_remotes.sh
scripts/diagnostics/: hail_day_climatology.py  render_pnas_article_figures.py  summarize_mesh_daily_peaks.py
tests/: README.md  conftest.py  test_01_download_myrorss.py  test_01_download_myrorss_parallel.py  test_02_download_mrms_mesh.py  test_02_download_mrms_mesh_parallel.py  test_03_download_spc.py  test_04a_download_era5_isotherms.py  test_04b_download_gridrad.py  test_04b_fill_gridrad_gap.py  test_04b_fill_gridrad_gap_parallel.py  test_04c_convective_filter.py  test_05_apply_mesh_bias_correction.py  test_06_validate_mesh_vs_spc.py  test_07_build_hail_climo.py  test_08_build_event_catalog.py  test_09_fit_cdf_regional.py  test_10_build_smooth_cdf.py  test_11_build_occurrence_probs.py  test_11b_prepare_topography.py  test_12_apply_conus_mask.py  test_13_generate_stochastic_catalog.py  test_14_build_vulnerability.py  test_15_render_figures.py  test_convective_day.py  test_hail_day_climatology_diagnostic.py  test_mesh_calibration_diagnostic.py  test_mesh_source_manifest.py  test_no_duplicated_constants.py  test_run_pipeline.py  test_stage01_02_grid_utils.py  test_stage03_spc.py  test_stage04_era_gridrad.py  test_stage05_bias_correction.py  test_stage08_events.py  test_stage09_cdf.py  test_stage10_11_12.py  test_stage13_stochastic.py  test_stage14_15_pipeline.py
tests/integration/: test_gridrad_hourly_fallback.py  test_smoke_synthetic.py
