[project]
name = "us-hail-cat-model"
version = "2.1.0"
description = "Radar-based probabilistic hail hazard model for CONUS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Christopher Melhauser", email = "christopher.melhauser@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = [
    "hail",
    "catastrophe model",
    "hazard",
    "MESH",
    "extreme value theory",
    "stochastic simulation",
    "return period",
    "CONUS",
    "radar",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.9",
    "rasterio>=1.3",
    "xarray>=2022.11",
    "regionmask>=0.9",
    "cartopy>=0.22",
    "lmoments3>=1.0.4",
    "pyarrow>=10",
    "matplotlib>=3.6",
    "boto3>=1.26",
    "s3fs>=2022.11",
    "netCDF4>=1.6",
    "h5py>=3.7",
    "scikit-learn>=1.1",
    "cdsapi>=0.5",
    "tqdm>=4.64",
    "requests>=2.28",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pip-tools>=7.0",
]

[project.urls]
Repository = "https://github.com/melhauserc/us-hail-cat-model"
Documentation = "https://github.com/melhauserc/us-hail-cat-model/tree/main/docs"
Changelog = "https://github.com/melhauserc/us-hail-cat-model/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/melhauserc/us-hail-cat-model/issues"

# ── Ruff (linter + formatter) ───────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — enforced by formatter, not lint
    "E401",   # multiple imports on one line — legacy scientific scripts
    "E402",   # module import not at top — optional heavy deps are imported lazily
    "E702",   # semicolon-separated setup in compact tests
    "F401",   # optional/stage-local imports can be platform dependent
    "F541",   # legacy f-strings without placeholders
    "F841",   # exploratory variables in tests/docs-adjacent checks
    "I001",   # import sorting is advisory until full style cleanup
    "N802",   # function name should be lowercase (scientific code uses caps for constants)
    "N806",   # variable in function should be lowercase (numpy arrays conventionally upper)
    "B007",   # loop variables sometimes retained for readability in diagnostics
    "B905",   # zip(strict=) would require Python-version-specific churn in tests
    "RUF001", # scientific docs/scripts intentionally use unicode ranges and symbols
    "RUF002", # scientific docs/scripts intentionally use unicode ranges and symbols
    "RUF003", # scientific docs/scripts intentionally use unicode ranges and symbols
    "RUF007", # pairwise conversion is style-only
    "RUF015", # single-item selection style-only
    "RUF022", # __all__ order is grouped by domain
    "RUF046", # explicit casts are kept near numpy/pandas boundaries
    "RUF059", # unpacked placeholders are common in scientific tests
    "SIM102", # nested conditionals are often clearer in pipeline code
    "SIM108", # explicit if/else is clearer for stage branching
    "SIM118", # explicit keys() sometimes documents dict-like objects
    "SIM300", # Yoda-condition style checks are advisory
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py"   = ["S101"]   # allow assert in tests

[tool.ruff.format]
quote-style = "double"

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# Helper modules (_config, _logging, _io) are centralized; enable strict checks when mypy coverage is expanded:
# [[tool.mypy.overrides]]
# module = "scripts._config"
# strict = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --strict-markers"
markers   = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests requiring synthetic pipeline run",
    "regression: marks regression tests requiring golden outputs",
]
filterwarnings = [
    # Some Matplotlib dependency combinations can emit pyparsing
    # deprecation warnings during font/mathtext parser setup. They are
    # third-party compatibility noise, not model-code warnings.
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning:matplotlib\\..*",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["scripts"]
omit   = ["scripts/archive/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
